[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Audio Settings.gd" type="Script" id=2]

[node name="Audio Settings" type="Popup" groups=[
"Menus",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 500, 350 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect5" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 942.79, -213.944 )
color = Color( 0.164706, 0.0431373, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
color = Color( 0.494118, 0.345098, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -230.0
margin_right = 240.0
margin_bottom = -195.0
text = "Audio Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -170.0
margin_right = 240.0
margin_bottom = 240.0
rect_min_size = Vector2( 480, 410 )
rect_pivot_offset = Vector2( -535.494, 147.587 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="masterlabel" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 30.0
text = "Master Volume"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 480.0
margin_bottom = 77.0

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/CenterContainer"]
margin_left = 90.0
margin_right = 390.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )
min_value = -50.0
max_value = 20.0
value = 20.0

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 480.0
margin_bottom = 122.0
text = "Music"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 137.0
margin_right = 480.0
margin_bottom = 169.0

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/CenterContainer2"]
margin_left = 90.0
margin_right = 390.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )
min_value = -50.0
max_value = 20.0
value = 20.0

[node name="SFX Label" type="Label" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 480.0
margin_bottom = 214.0
text = "SFX"
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 229.0
margin_right = 480.0
margin_bottom = 261.0

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/CenterContainer3"]
margin_left = 90.0
margin_right = 390.0
margin_bottom = 32.0
rect_min_size = Vector2( 300, 0 )
min_value = -50.0
max_value = 20.0
value = 20.0

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 276.0
margin_right = 480.0
margin_bottom = 346.0

[node name="SaveButton" type="Button" parent="VBoxContainer/CenterContainer4"]
margin_left = 24.0
margin_right = 455.0
margin_bottom = 70.0
text = "Save  Settings"
[connection signal="value_changed" from="VBoxContainer/CenterContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer3/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer4/SaveButton" to="." method="_on_SaveButton_pressed"]
